refac(front): #3595.1 change the home view
- Change Products view to the new design
- Added Animation on Scroll CDN


Former-commit-id: 2574bca04c0ac54a403c1bc6e646f13a41d3fce6

--- a/theme/2020/templates/base.html
+++ b/theme/2020/templates/base.html
@@ -51,6 +51,11 @@
         <link
         rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
+
+        <!-- Animation on Scroll -->
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
       <!-- Highlight.js syntax highlighter -->
       <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.1/styles/foundation.min.css">
@@ -295,6 +300,11 @@
       </div>
     <!-- Footer -->
       {% include "footer.html" %}
+
+    <!-- Initialize Animation on Scroll -->
+    <script>
+      AOS.init();
+    </script>
     <!-- RDStation -->
       <script type="text/javascript"
               async
