refac(front): #3595.2 change the home view
- Change Products view to the new design
- Added buttons to products


Former-commit-id: 80819b4651aeee46dcef2b689807e5ce1a0054a0

--- a/theme/2020/templates/landing.html
+++ b/theme/2020/templates/landing.html
@@ -50,9 +50,9 @@
   </h1>
 </div>
 <div class="mw9 center h6 pv4">
-  <div class="pl3-l pr0-l dib w-100">
+  <div class="pl3-l pr0-l w-100">
     <h2 class="roboto f2-ns f3 c-fluid-bk strong tc">Products</h2>
-    <div class="w-90 tc ml-auto mr-auto pv3">
+    <div class="w-90 tc ml-auto mr-auto pv4">
       <div class="w-50-l ml-auto mr-auto">
         <img
         data-aos="zoom-in"
@@ -73,9 +73,13 @@
           define their treatments, and check the status and progress of their
           remediation.
         </p>
+        <a href="{{ SITEURL }}/products/integrates/">
+          <button class="button-white tl roboto fw7">Learn More</button>
+        </a>
+
       </div>
     </div>
-    <div class="w-90 tc ml-auto mr-auto pv3">
+    <div class="w-90 tc ml-auto mr-auto pv4">
       <div class="w-50-l ml-auto mr-auto">
         <img
         data-aos="zoom-in"
@@ -86,7 +90,7 @@
         class="pv3"
         src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/drills/drills-logo.png"
         alt="Drills logo">
-        <h3 class="roboto f3-ns f4 fw1 mt0">
+        <h3 class="c-fluid-bk roboto f3-ns f4 fw1 mt0">
           The Human element that Continuously Detect Vulnerabilities
         </h3>
         <p class="c-fluid-bk roboto fw1 f4 lh-2">
@@ -96,9 +100,12 @@
           Forget about false positives and false negatives.
           <strong class="b">Drills</strong> includes SAST, DAST, IAST, and SCA techniques.
         </p>
+        <a href="{{ SITEURL }}/products/drills/">
+          <button class="button-white tl roboto fw7">Learn More</button>
+        </a>
       </div>
     </div>
-    <div class="w-90 tc ml-auto mr-auto pv3">
+    <div class="w-90 tc ml-auto mr-auto pv4">
       <div class="w-50-l ml-auto mr-auto">
         <img
         data-aos="zoom-in"
@@ -109,7 +116,7 @@
         class="pv3"
         src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/forces/forces-logo.png"
         alt="Forces logo">
-        <h3 class="roboto f3-ns f4 fw1 mt0">
+        <h3 class="c-fluid-bk roboto f3-ns f4 fw1 mt0">
           The Robot Element that Breaks the Build to Force Remediation
         </h3>
         <p class="c-fluid-bk roboto fw1 f4 lh-2">
@@ -119,88 +126,76 @@
           re-opened vulnerabilities, and new peripheral vulnerabilities.
           It can also verify your post-deploy production status.
         </p>
+        <a href="{{ SITEURL }}/products/forces/">
+          <button class="button-white tl roboto fw7">Learn More</button>
+        </a>
       </div>
     </div>
   </div>
 </div>
 <!-- Services -->
-<div class="mw9 center h6 pv5 mv5">
-  <div class="tl fr-l w-40-l">
-    <h2 class="c-fluid-bk center roboto w-100 tl-l tc f2-ns f3 mb0 pb4">
-      Services
-    </h2>
-    <div class="continuous dn-l">
-      <ul class="list tc w-40-l w-100 ph2">
-        <li>
-          <img
-          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/services/service-continuous.png"
-          alt="Young hacker smiling">
-        </li>
-      </ul>
+<div class="mw9 center h6 pv4">
+  <div class="pl3-l pr0-l w-100 pv4">
+    <h2 class="roboto f2-ns f3 c-fluid-bk strong tc">Services</h2>
+    <div class="w-90 tc ml-auto mr-auto pv3">
+      <div class="w-50-l ml-auto mr-auto">
+        <img
+        data-aos="zoom-in"
+        src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/services/service-continuous.png"
+        alt="Young hacker smiling">
+
+        <h3 class="c-fluid-bk roboto f3-ns f4 fw7 mt0 pt3">Continuous Hacking</h3>
+        <p class="c-fluid-bk roboto fw1 f4 lh-2">
+          Vulnerabilities and security issues are continuously detected
+          and reported during the entire software development cycle.
+          Fluid Attacks runs comprehensive testing
+          through SAST, DAST, IAST and SCA techniques,
+          detecting all vulnerabilities with no false positives.
+        </p>
+        <div class="dib ph2">
+          <a href="{{ SITEURL }}/services/continuous-hacking/">
+            <button class="button-white tl roboto fw7">Learn More</button>
+          </a>
+        </div>
+        <div class="dib ph2">
+          <a href="{{ SITEURL }}/contact-us/">
+            <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">
+              Get a Demo
+            </button>
+          </a>
+        </div>
+      </div>
     </div>
-    <div class="oneshot dn">
-      <ul class="list tc w-40-l w-100 ph2 dn-l">
-        <li>
-          <img
-          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/services/service-one-shot.png"
-          alt="Young hacker smiling">
-        </li>
-      </ul>
-    </div>
-    <ul class="list pl0-ns pl3 tl tc-m ma0">
-      <li class="pr2 di">
-        <input type="radio" id="op5" class="dn" name="menu2" checked />
-        <label class="index5 c-fluid-gray f4-ns f5 roboto no-underline fw3 hv-fluid-dkred pointer" for="op5">
-          Continuous Hacking
-        </label>
-      </li>
-      <li class="ph2 di">
-        <input type="radio" id="op6" class="dn transparent" name="menu2"/>
-        <label class="index6 c-fluid-gray f4-ns f5 roboto no-underline fw3 hv-fluid-dkred pointer" for="op6">
-          One-Shot Hacking
-        </label>
-      </li>
-    </ul>
   </div>
-  <div class="pl3-l pr0-l dib w-100">
-    <div class="continuous w-100 mh0-l ph3-l center fl">
-      <ul class="list fl center w-40-l w-100 ph2 db-l dn">
-        <li>
-          <img
-          class="fr-l"
-          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/services/service-continuous.png"
-          alt="Young hacker smiling">
-        </li>
-      </ul>
-      <ul class="list fr-l w-40-l w-70-m w-100 pl0-l ph3 center tl-ns tc">
-        <li>
-          <p class="roboto fw1 tl f3-ns f5 lh-2">
-            Vulnerabilities and security issues are continuously detected
-            and reported during the entire software development cycle.
-            Fluid Attacks runs comprehensive testing
-            through SAST, DAST, IAST and SCA techniques,
-            detecting all vulnerabilities with no false positives.
-          </p>
-        </li>
-        <li class="pt4-l">
-          <div class="dib">
-            <a class="no-underline pr4 b roboto dib-l dn"
-               href="{{ SITEURL }}/services/continuous-hacking/">
-              <span class="br2 bg-white bc-fluid-red ba hv-fluid-rd hv-fluid-bd ph4 pv2 bt-trans c-dkred pointer mt2">
-                Learn More
-              </span>
-            </a>
-          </div>
-          <div class="dib tc w-auto-l w-100">
-            <a class="roboto fw1 f5 no-underline c-fluid-bk hv-fluid-dkred"
-               href="{{ SITEURL }}/contact-us/">
-              <span class="br2 bannerbt hv-bt-fluid-rd ph4-l ph5 pv2 bt-trans white b roboto pointer mt2">
-                  Get a Demo
-              </span>
-            </a>
-          </div>
-        </li>
-      </ul>
+  <div class="pl3-l pr0-l w-100 pv4">
+    <div class="w-90 tc ml-auto mr-auto pv3">
+      <div class="w-50-l ml-auto mr-auto">
+        <img
+        data-aos="zoom-in"
+        src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/services/service-one-shot.png"
+        alt="Young hacker smiling">
+
+        <h3 class="roboto c-fluid-bk f3-ns f4 fw7 mt0 pt3">One Shot Hacking</h3>
+        <p class="c-fluid-bk roboto fw1 f4 lh-2">
+          Vulnerabilities and security issues are continuously detected
+          and reported during the entire software development cycle.
+          Fluid Attacks runs comprehensive testing
+          through SAST, DAST, IAST and SCA techniques,
+          detecting all vulnerabilities with no false positives.
+        </p>
+        <div class="dib ph2">
+          <a href="{{ SITEURL }}/services/one-shot-hacking/">
+            <button class="button-white tl roboto fw7">Learn More</button>
+          </a>
+        </div>
+        <div class="dib ph2">
+          <a href="{{ SITEURL }}/contact-us/">
+            <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">
+              Get a Demo
+            </button>
+          </a>
+        </div>
+      </div>
     </div>
     <div class="oneshot w-100 mh0-l ph3-l center dn fl">
       <ul class="list fl center w-40-l w-100 ph2 db-l dn">
