--- a/integrates/app/templates/app.html
+++ b/integrates/app/templates/app.html
@@ -49,7 +49,9 @@
         );
       }
       </script>
-    <script src="{% static 'app/delighted.js' %}" type="text/javascript"></script>
+    <!-- Start of Delighted survey script -->
+    <script defer src="{% static 'app/delighted.js' %}" type="text/javascript"></script>
+    <!-- End of Delighted survey script -->
     <!-- Start of fluidattacks Zendesk Widget script -->
     <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=dc2bbf98-b773-4e25-ac9f-6cb800f7d293"></script>
     <!-- End of fluidattacks Zendesk Widget script -->
