integrates\feat(front): #2288.1 recommended policies values
- Show recommended values for the organization policies we
  currently support.
- Fix issue that was not enforcing header width on *DataTableNext*
  component.
- Adjust tables that had the header width set in a weird manner.


Former-commit-id: c0032de19c725ced792992204c46a037b5c7a16b

--- a/integrates/front/src/scenes/Dashboard/containers/OrganizationPoliciesView/index.css
+++ b/integrates/front/src/scenes/Dashboard/containers/OrganizationPoliciesView/index.css
@@ -1,14 +1,20 @@
+:local .recommended {
+  margin: 10px 0 0 0 ;
+  text-align: center;
+  white-space: pre;
+}
+
 :local .severityGrid {
-    padding: 0 !important;
+  padding: 0 !important;
 }
 
 :local .severityRow {
-    text-align: center !important;
+  text-align: center !important;
 }
 
-@media(min-width: 768px) {
-    .severityRow {
-        align-items: center !important;
-        display: flex !important;
-    }
+@media(min-width: 1000px) {
+  .severityRow {
+    align-items: center !important;
+    display: flex !important;
+  }
 }
