fix(front): #3599 fix subtitles of products
Former-commit-id: 498bea1087241e9233db7d807e145a1dfe5b8d39

--- a/theme/2020/templates/landing.html
+++ b/theme/2020/templates/landing.html
@@ -64,7 +64,7 @@
         src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/integrates/integrates-logo.png"
         alt="integrates logo">
         <h3 class="c-fluid-bk roboto fw1 f3-ns f4">
-          The Platform Element that Control the Process to Achieve Remediation
+          The Platform Element that Controls the Process to Achieve Remediation
         </h3>
         <p class="c-fluid-bk roboto fw1 f4 lh-2">
           <strong class="b">Integrates</strong> is a platform that stores vulnerabilities
@@ -91,7 +91,7 @@
         src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/drills/drills-logo.png"
         alt="Drills logo">
         <h3 class="c-fluid-bk roboto f3-ns f4 fw1 mt0">
-          The Human element that Continuously Detect Vulnerabilities
+          The Human Element that Continuously Detects Vulnerabilities
         </h3>
         <p class="c-fluid-bk roboto fw1 f4 lh-2">
           <strong class="b">Drills</strong>, through the right combination
