--- a/integrates/app/templates/HTTP500.html
+++ b/integrates/app/templates/HTTP500.html
@@ -40,7 +40,7 @@ Our powerful engineering team has been dispatched to solve the problem.</p>
     <script>
         function Redirect()
         {
-        window.location="https://fluidattacks.com";
+        window.location="https://fluidattacks.com/integrates";
         }
         setTimeout(Redirect, 10000);
     </script>
