refac(front): #3611 change clutch badge
Former-commit-id: 48876568a972b585b346defaad1862d7a1c57c11

--- a/theme/2020/templates/footer.html
+++ b/theme/2020/templates/footer.html
@@ -167,10 +167,11 @@
             alt="Youtube logo">
         </a>
       </div>
-      <div class="clutch-frame pr3 pt3">
-        <script type="text/javascript" src="https://static1.clutch.co/api/widget.js"></script>
-        <div class="clutch-widget" data-url="https://clutch.co" data-widget-type="1" data-height="50"
-             data-clutchcompany-id="488256"></div>
+      <div class="pr3 pt3">
+        <a href="https://clutch.co/profile/fluid-attacks#reviews" target="_blank" rel="noopener noreferrer">
+          <img loading="lazy" src="{{ SITEURL }}/theme/images/clutch-review.png"
+              alt="Clutch Review">
+        </a>
       </div>
     </div>
   </div>
