--- a/theme/2020/templates/base.html
+++ b/theme/2020/templates/base.html
@@ -195,7 +195,7 @@
       <script type="text/javascript"
               src="{{ SITEURL }}/{{ ASSET_URL }}"></script>
     {% endassets %}
-    {% assets output="static/js/contentHome.min.js", "js/tmp/contentHome.min.js", "js/tmp/dynClasses.min.js", "js/tmp/anchor.min.js", "js/tmp/gsapAnimations.min.js" %}
+    {% assets output="static/js/contentHome.min.js", "js/tmp/contentHome.min.js", "js/tmp/dynClasses.min.js", "js/tmp/anchor.min.js" %}
     <script type="text/javascript"
               src="{{ SITEURL }}/{{ ASSET_URL }}"></script>
     {% endassets %}
