--- a/theme/2020/templates/landing.html
+++ b/theme/2020/templates/landing.html
@@ -16,19 +16,28 @@
 <div class="flex-ns flex-wrap-ns justify-between-m banner-bg bg-banner-sz coverm cover-s h50-l h6-m h40-s mb5 pb5">
   <div class="ba1 mb3 relative dt-ns mt0-ns pr3-ns pl3-ns pt3 ma-auto pt6-l pt4 mw9 ml-auto mr-auto w-100">
     <!-- Banner Image-->
-    <div class="fr-l w-45-l w100-m w90-s tc ml-auto mr-auto">
-      <img loading="lazy" class="new-banner" id="turbine"
+    <div class="fr-l w-45-l w100-m w90-s tc ml-auto mr-auto"
+         data-aos="fade-right"
+         data-aos-offset="300"
+         data-aos-easing="ease-in-sine"
+         data-aos-duration="1500">
+      <img class="new-banner"
       src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/turbine-main.png"
       alt="Young hacker smiling">
     </div>
     <!-- Banner title and text -->
-    <div class="fl-l w-50-l w100-m w90-s mt3-l center pt0-ns pt4">
-      <h1 class="turbine-text c-fluid-bk fheader-l f-6-m fheader-s fheader-vl fw9 tl tc-m neue ma0">PENTEST</h1>
-      <p class="turbine-text c-fluid-bk roboto fw3 lh2 f-sub ma0 tl tc-m w-auto-ns nt4-ns">
+    <div class="fl-l w-50-l w100-m w90-s mt3-l center pt0-ns pt4"
+         data-aos="fade-zoom-in"
+         data-aos-easing="ease-in-back"
+         data-aos-delay="1000"
+         data-aos-offset="0"
+         data-aos-duration="500">
+      <h1 class="c-fluid-bk fheader-l f-6-m fheader-s fheader-vl fw9 tl tc-m neue ma0">PENTEST</h1>
+      <p class="c-fluid-bk roboto fw3 lh2 f-sub ma0 tl tc-m w-auto-ns nt4-ns">
         FOR YOUR SOFTWARE DEVELOPMENT LIFE CYCLE
       </p>
       <!-- Get a Demo button -->
-      <div class="turbine-text tl-l tc pt2-l pt5">
+      <div class="tl-l tc pt2-l pt5">
         <a class="no-underline" href="{{ SITEURL }}/contact-us/">
           <span class="dib br2 bannerbt hv-bt-fluid-rd ph4-l ph5 pv2 bt-trans white b roboto pointer mt2">
               Get a Demo
