feat(front): #3614 add option to the contact form
Former-commit-id: ef2d95c4a14b45cb4c8a629220b72aa4935fb3d9

--- a/theme/2020/templates/contact-us.html
+++ b/theme/2020/templates/contact-us.html
@@ -179,6 +179,8 @@
               I am looking for a job</option>
             <option value="Quiero una Demo">
               I want a Demo</option>
+            <option value="Quiero ser Partner">
+              I want to be a partner</option>
           </select>
         </div>
         <script type="text/javascript">
@@ -198,7 +200,9 @@
               selpoi.style.display="block";
             }
 
-            if (sel == "Quiero una propuesta de servicios" || sel == "Quiero una Demo"){
+            if (sel == "Quiero una propuesta de servicios" ||
+                sel == "Quiero una Demo" ||
+                sel == "Quiero ser Partner" ){
               msg.style.display="block";
               msgtext.style.display="block";
             }
