refac(front): #3618 home fix products paragraphs
- The Products paragraphs on Home page have been shortened.


Former-commit-id: 6bddeb93569aba528e5f87f5b14fb0b4317c95e5

--- a/theme/2020/templates/landing.html
+++ b/theme/2020/templates/landing.html
@@ -76,11 +76,11 @@
           The Platform Element that Controls the Process to Achieve Remediation
         </h3>
         <p class="c-fluid-bk roboto fw1 f4 lh-2">
-          <strong class="b">Integrates</strong> is a platform that stores vulnerabilities
-          and gives you access to their evidence in different phases and in real time.
-          You can easily and quickly classify and prioritize them,
-          define their treatments, and check the status and progress of their
-          remediation.
+          <strong class="b">Integrates</strong> is a platform where vulnerabilities
+          are reported, classified and prioritized.
+          It also allows you to define their treatments,
+          as well as check the status
+          and progress of their remediation.
         </p>
         <a href="{{ SITEURL }}/products/integrates/">
           <button class="button-white tl roboto fw7">Learn More</button>
@@ -103,11 +103,11 @@
           The Human Element that Continuously Detects Vulnerabilities
         </h3>
         <p class="c-fluid-bk roboto fw1 f4 lh-2">
-          <strong class="b">Drills</strong>, through the right combination
-          of technology and human intelligence, finds deep and zero-day vulnerabilities
+          <strong class="b">Drills</strong> uses the right combination
+          of technology and human intelligence
+          to find deep and zero-day vulnerabilities
           during the software development life cycle.
-          Forget about false positives and false negatives.
-          <strong class="b">Drills</strong> includes SAST, DAST, IAST, and SCA techniques.
+          Forget about false positives and false negatives!
         </p>
         <a href="{{ SITEURL }}/products/drills/">
           <button class="button-white tl roboto fw7">Learn More</button>
@@ -130,9 +130,9 @@
         </h3>
         <p class="c-fluid-bk roboto fw1 f4 lh-2">
           <strong class="b">Forces</strong> allows you to implement
-          DevSecOps in your project. It breaks the build
-          to force remediation of confirmed deep vulnerabilities,
-          re-opened vulnerabilities, and new peripheral vulnerabilities.
+          DevSecOps into your project.
+          It breaks the build to force the remediation
+          of confirmed deep, re-opened and new peripheral vulnerabilities.
           It can also verify your post-deploy production status.
         </p>
         <a href="{{ SITEURL }}/products/forces/">
