--- a/theme/2020/templates/about-us/cardsgen.html
+++ b/theme/2020/templates/about-us/cardsgen.html
@@ -44,12 +44,21 @@
           </a>
           <span class="c-fluid-gray v-mid b"> / </span>
         </li>
+        {% if page.partnersindex %}
         <li class="dib mt0">
           <a class="white hover-white no-underline"
              href=".">
             Partners
           </a>
         </li>
+        {% elif page.certificationsindex %}
+        <li class="dib mt0">
+          <a class="white hover-white no-underline"
+             href=".">
+            Certifications
+          </a>
+        </li>
+        {% endif %}
       </ul>
     </div>
   </div>
@@ -60,7 +69,7 @@
 {% block header %}
 <div class="bg-graylight">
   <div
-    class="partners-bg coverm cover-s banner-height justify-center items-center flex bg-center mw-1200 ml-auto mr-auto">
+    class="{{page.banner}} coverm cover-s banner-height justify-center items-center flex bg-center mw-1200 ml-auto mr-auto">
     <div class="w-100 center">
       <h1 class="white fw7 f1 neue tc f-5-l ma0">
         {{ page.title }}
@@ -77,10 +86,13 @@
     <div>
       {{ page.content }}
     </div>
+    {% if page.partnersindex %}
     <div class="cardgrid flex-ns flex-wrap-ns justify-between-m">
       {% for partnerpage in pages if partnerpage.partner %}
       <div class="br3 shadowbox-blog hover-card relative dt-ns mv3 mh2 bg-white w-card">
-        <button class="accordion pointer pa3 w-100 bg-white outline-transparent bn t-all-5"><img src="{{ SITEURL }}/about-us/partners/{{partnerpage.partnerlogo}}.png" alt="{{partnerpage.alt}}"></button>
+        <button class="accordion pointer pa3 w-100 bg-white outline-transparent bn t-all-5">
+          <img src="{{ SITEURL }}/about-us/partners/{{partnerpage.partnerlogo}}.png" alt="{{partnerpage.alt}}">
+        </button>
         <div class="panel pv0 ph2 bg-white t-all-5 overflow-hidden">
           {{ partnerpage.content }}
         </div>
@@ -96,6 +108,30 @@
       <p>If you are interested in partnering with <code>Fluid Attacks</code>,
       please submit the following <a href="{{ SITEURL }}/contact-us/">Contact Form</a>.</p>
       </div>
+    {% endif %}
+
+    {% if page.certificationsindex %}
+    <div class="cardgrid flex-ns flex-wrap-ns justify-between-m">
+      {% for certificationspage in pages if certificationspage.certification %}
+      <div class="br3 shadowbox-blog hover-card relative dt-ns mv3 mh2 bg-white w-card">
+        <button class="accordion pointer pa3 w-100 bg-white outline-transparent bn t-all-5">
+          <img src="{{ SITEURL }}/about-us/certifications/{{certificationspage.certificationlogo}}.png" alt="{{certificationspage.alt}}"> <br>
+          <h4>
+            {{ certificationspage.title }}
+          </h4>
+        </button>
+        <div class="panel pv0 ph2 bg-white t-all-5 overflow-hidden">
+          {{ certificationspage.content }}
+        </div>
+        <button class="readmore tc fw3 w-100 pointer bn bg-white outline-transparent">
+          &nbsp <br>
+          <img loading="lazy" class="arrow w1 pv3" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/angle-arrow-down.svg"
+               alt="Fluid Arrow">
+        </button>
+      </div>
+      {% endfor %}
+    </div>
+    {% endif %}
   </div>
 </div>
 
