fix(front): #3619 fix dropdown of cards
Former-commit-id: 3a3baf18b6cdce5f7327121814a898c0e14b5b53

--- a/theme/2020/static/scss/base.scss
+++ b/theme/2020/static/scss/base.scss
@@ -944,13 +944,12 @@ video {
 
 .cardgrid{
   .accordion {
-    min-height: 200px;
+    min-height: 280px;
     img {
       max-height: 150px;
     }
   }
   .panel{
-      max-height: 0;
-      min-height: 0;
+      height: 0;
   }
 }
