--- a/theme/2020/templates/about-us/cardsgen.html
+++ b/theme/2020/templates/about-us/cardsgen.html
@@ -93,7 +93,7 @@
         <button class="accordion pointer pa3 w-100 bg-white outline-transparent bn t-all-5">
           <img src="{{ SITEURL }}/about-us/partners/{{partnerpage.partnerlogo}}.png" alt="{{partnerpage.alt}}">
         </button>
-        <div class="panel pv0 ph2 bg-white t-all-5 overflow-hidden">
+        <div class="panel pv0 ph2 bg-white t-all-5 overflow-hidden ph4">
           {{ partnerpage.content }}
         </div>
         <button class="readmore tc fw3 w-100 pointer bn bg-white outline-transparent">
@@ -120,10 +120,10 @@
             {{ certificationspage.title }}
           </h4>
         </button>
-        <div class="panel pv0 ph2 bg-white t-all-5 overflow-hidden">
+        <div class="panel pv0 ph2 bg-white t-all-5 overflow-hidden ph4">
           {{ certificationspage.content }}
         </div>
-        <button class="readmore tc fw3 w-100 pointer bn bg-white outline-transparent">
+        <button class="readmore tc fw3 w-100 bn bg-white outline-transparent">
           &nbsp <br>
           <img loading="lazy" class="arrow w1 pv3" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/angle-arrow-down.svg"
                alt="Fluid Arrow">
