refac(front): #3620 home fix services paragraphs
- Continuous and One-Shot now have their corresponding paragraphs.


Former-commit-id: d4d7c31a868b945ac160ca7eefa4cef33b17e591

--- a/theme/2020/templates/landing.html
+++ b/theme/2020/templates/landing.html
@@ -157,8 +157,7 @@
         <p class="c-fluid-bk roboto fw1 f4 lh-2">
           Vulnerabilities and security issues are continuously detected
           and reported during the entire software development cycle.
-          Fluid Attacks runs comprehensive testing
-          through SAST, DAST, IAST and SCA techniques,
+          Fluid Attacks runs comprehensive testing,
           detecting all vulnerabilities with no false positives.
         </p>
         <div class="dib ph2">
@@ -184,13 +183,13 @@
         src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/services/service-one-shot.png"
         alt="Young hacker smiling">
 
-        <h3 class="roboto c-fluid-bk f3-ns f4 fw7 mt0 pt3">One Shot Hacking</h3>
+        <h3 class="roboto c-fluid-bk f3-ns f4 fw7 mt0 pt3">One-Shot Hacking</h3>
         <p class="c-fluid-bk roboto fw1 f4 lh-2">
-          Vulnerabilities and security issues are continuously detected
-          and reported during the entire software development cycle.
-          Fluid Attacks runs comprehensive testing
-          through SAST, DAST, IAST and SCA techniques,
-          detecting all vulnerabilities with no false positives.
+          Fluid Attacks detects and reports
+          vulnerabilities within one specific
+          version of your application.
+          All existing vulnerabilities are detected
+          with no false positives.
         </p>
         <div class="dib ph2">
           <a href="{{ SITEURL }}/services/one-shot-hacking/">
